--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "dev": "ts-node ./src/index.ts",
-    "debug": "tsc && node --inspect ./dist/src/index.js",
-    "build:custom": "webpack",
-    "build": "tsc",
-    "prod": "tsc && node ./dist/src/index.js"
+    "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
+    "build-ts": "tsc",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
+    "debug": "npm run build && npm run watch-debug",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "serve": "node dist/server.js",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "start": "npm run serve",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-node": "nodemon dist/server.js",
+    "watch-test": "npm run test -- --watchAll",
+    "watch-ts": "tsc -w",
+    "start:nodemon": "nodemon"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.1",
@@ -25,6 +34,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.17.0",
@@ -32,36 +42,49 @@
     "helmet": "^3.22.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
-    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "s3-proxy": "^1.2.1",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
+    "@types/chai": "^4.2.14",
     "@types/compression": "^1.7.0",
     "@types/connect-flash": "0.0.35",
     "@types/connect-mongodb-session": "0.0.4",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.8",
+    "@types/eslint": "^7.2.4",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/express-validator": "^3.0.0",
     "@types/faker": "^5.1.3",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.5.31",
     "@types/mongoose": "^5.7.36",
     "@types/multer": "^1.4.4",
     "@types/multer-s3": "^2.7.8",
     "@types/serve-static": "^1.13.6",
+    "@types/shelljs": "^0.8.8",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "chai": "^4.2.0",
+    "eslint": "^7.12.1",
     "faker": "^5.1.0",
+    "jest": "^26.6.1",
+    "nodemon": "^2.0.6",
     "request": "^2.81.0",
+    "shelljs": "^0.8.4",
+    "supertest": "^6.0.0",
     "tape": "^4.7.0",
-    "ts-node": "^9.0.0",
-    "ts-node-dev": "^1.0.0",
+    "ts-jest": "^26.4.3",
+    "typescript": "^4.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
