--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "12.x"
   },
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
     "build-ts": "tsc",
@@ -20,12 +20,9 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
-    "watch-ts": "tsc -w",
-    "start:nodemon": "nodemon"
+    "watch-ts": "tsc -w"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.1",
-    "aws-sdk": "^2.610.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -40,12 +37,13 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "helmet": "^3.22.0",
+    "http-proxy-middleware": "^1.0.6",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "s3-proxy": "^1.2.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "serve-static": "^1.14.1",
     "winston": "^3.3.3"
   },
@@ -64,11 +62,13 @@
     "@types/express-validator": "^3.0.0",
     "@types/faker": "^5.1.3",
     "@types/helmet": "^4.0.0",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.5.31",
     "@types/mongoose": "^5.7.36",
     "@types/multer": "^1.4.4",
-    "@types/multer-s3": "^2.7.8",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
     "@types/serve-static": "^1.13.6",
     "@types/shelljs": "^0.8.8",
     "@types/supertest": "^2.0.10",
@@ -79,11 +79,11 @@
     "faker": "^5.1.0",
     "jest": "^26.6.1",
     "nodemon": "^2.0.6",
-    "request": "^2.81.0",
     "shelljs": "^0.8.4",
     "supertest": "^6.0.0",
     "tape": "^4.7.0",
     "ts-jest": "^26.4.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
