--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "12.x"
   },
-  "main": "dist/app.js",
+  "main": "dist/server.js",
   "scripts": {
     "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
     "build-ts": "tsc",
@@ -20,7 +20,8 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "gcp-build": "npm run build"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
