--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "dist/server.js",
   "scripts": {
-    "build": "npm run build-ts && npm run lint && npm run copy-static-assets",
+    "build": "npm-run-all build-ts copy-static-assets parcel",
     "build-ts": "tsc",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "debug": "npm run build && npm run watch-debug",
@@ -15,15 +15,16 @@
     "serve": "node dist/server.js",
     "serve-debug": "nodemon --inspect dist/server.js",
     "start": "npm run serve",
+    "parcel": "parcel build src/public/js/custom/*.ts -d dist/public/js/custom",
+    "parcel-watch": "parcel watch src/public/js/custom/*.ts -d dist/public/js/custom",
     "test": "jest --forceExit --coverage --verbose",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
     "watch-ts": "tsc -w",
     "gcp-build": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -44,6 +45,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.15",
@@ -57,6 +59,7 @@
     "@types/helmet": "^4.0.0",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^26.0.20",
+    "@types/jquery": "^3.5.5",
     "@types/multer": "^1.4.5",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
@@ -70,6 +73,8 @@
     "faker": "^5.4.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.3",
     "shelljs": "^0.8.4",
     "supertest": "^6.1.3",
     "tape": "^4.7.0",
