--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "dist/server.js",
   "scripts": {
-    "build": "npm-run-all build-ts copy-static-assets parcel",
+    "clean": "rimraf dist/*",
+    "build": "npm-run-all clean build-ts copy-static-assets parcel-build-listings parcel-build-public",
     "build-ts": "tsc",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "debug": "npm run build && npm run watch-debug",
@@ -15,8 +16,10 @@
     "serve": "node dist/server.js",
     "serve-debug": "nodemon --inspect dist/server.js",
     "start": "npm run serve",
-    "parcel": "parcel build src/public/js/custom/*.ts -d dist/public/js/custom",
-    "parcel-watch": "parcel watch src/public/js/custom/*.ts -d dist/public/js/custom",
+    "parcel-build-listings": "parcel build client/listings/index.tsx -d dist/public/js/custom/listings",
+    "parcel-watch-listings": "parcel watch client/listings/index.tsx -d dist/public/js/custom/listings",
+    "parcel-build-public": "parcel build src/public/js/custom/*.ts -d dist/public/js/custom",
+    "parcel-watch-public": "parcel watch src/public/js/custom/*.ts -d dist/public/js/custom",
     "test": "jest --forceExit --coverage --verbose",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
@@ -24,6 +27,8 @@
     "gcp-build": "npm run build"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -41,6 +46,9 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "reactstrap": "^8.9.0",
     "serve-static": "^1.14.1",
     "winston": "^3.3.3"
   },
@@ -63,6 +71,8 @@
     "@types/multer": "^1.4.5",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@types/serve-static": "^1.13.9",
     "@types/shelljs": "^0.8.8",
     "@types/supertest": "^2.0.10",
@@ -75,6 +85,7 @@
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.3",
+    "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "supertest": "^6.1.3",
     "tape": "^4.7.0",
