--- a/package.json
+++ b/package.json
@@ -20,28 +20,33 @@
     "parcel-watch-listings": "parcel watch client/listings/index.tsx -d dist/public/js/custom/listings",
     "parcel-build-public": "parcel build src/public/js/custom/*.ts -d dist/public/js/custom",
     "parcel-watch-public": "parcel watch src/public/js/custom/*.ts -d dist/public/js/custom",
+    "parcel-build-public-lib": "parcel build src/public/js/lib/*.js -d dist/public/js/lib/",
+    "parcel-watch-auth": "parcel watch src/public/js/auth/main.ts -d dist/public/js/auth/",
     "test": "jest --forceExit --coverage --verbose",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
     "watch-ts": "tsc -w",
     "gcp-build": "npm run build"
   },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "connect-flash": "^0.1.1",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
     "express-validator": "^6.10.0",
     "helmet": "^3.22.0",
     "http-proxy-middleware": "^1.0.6",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
@@ -50,6 +55,7 @@
     "react-dom": "^17.0.1",
     "reactstrap": "^8.9.0",
     "serve-static": "^1.14.1",
+    "vue": "^2.6.12",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -58,16 +64,15 @@
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.15",
     "@types/compression": "^1.7.0",
-    "@types/connect-flash": "0.0.35",
     "@types/eslint": "^7.2.7",
     "@types/express": "^4.17.11",
-    "@types/express-session": "^1.17.3",
     "@types/express-validator": "^3.0.0",
     "@types/faker": "^5.1.7",
     "@types/helmet": "^4.0.0",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.5",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
@@ -76,6 +81,7 @@
     "@types/serve-static": "^1.13.9",
     "@types/shelljs": "^0.8.8",
     "@types/supertest": "^2.0.10",
+    "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "chai": "^4.3.3",
