feat: Implement db_api communication
comment: User actions now communicates with db

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "parcel-build-public": "parcel build src/public/js/custom/*.ts -d dist/public/js/custom",
     "parcel-watch-public": "parcel watch src/public/js/custom/*.ts -d dist/public/js/custom",
     "parcel-build-public-lib": "parcel build src/public/js/lib/*.js -d dist/public/js/lib/",
-    "parcel-watch-auth": "parcel watch src/public/js/auth/main.ts -d dist/public/js/auth/",
+    "parcel-watch-public-auth": "parcel watch src/public/js/auth/main.ts -d dist/public/js/auth/",
+    "parcel-build-public-auth": "parcel build src/public/js/auth/main.ts -d dist/public/js/auth/",
     "test": "jest --forceExit --coverage --verbose",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
@@ -32,11 +33,11 @@
     "vue": "./node_modules/vue/dist/vue.common.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.8.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.1",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "csurf": "^1.11.0",
@@ -48,6 +49,7 @@
     "http-proxy-middleware": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.22",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -60,7 +62,6 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.15",
     "@types/compression": "^1.7.0",
@@ -74,6 +75,7 @@
     "@types/jquery": "^3.5.5",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
+    "@types/nanoid": "^2.1.0",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^17.0.3",
