--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/server.js",
   "scripts": {
     "clean": "rimraf dist/*",
-    "build": "npm-run-all clean build-ts copy-static-assets parcel-build-listings parcel-build-public",
+    "build": "npm-run-all clean build-ts copy-static-assets parcel-build-listings parcel-build-public parcel-build-public-auth",
     "build-ts": "tsc",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "debug": "npm run build && npm run watch-debug",
