--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
     "watch-ts": "tsc -w",
-    "gcp-build": "npm run build"
+    "gcp-build": "npm run build",
+    "create-env": "printenv > .env"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js"
