--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,6 +19,8 @@ steps:
     - 'GCLOUD_BUCKET_PROD=${_GCLOUD_BUCKET_PROD}'
     - 'GCOUD_PROJECT_ID=${_GCOUD_PROJECT_ID}'
     - 'TOKEN_SECRET=${_TOKEN_SECRET}'
+- name: "gcr.io/cloud-builders/npm"
+  args: ["run", "test-cloud"]
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 timeout: "1600s"
